# ORM_Django

./: .env sample  README.md  categories.json  products.json  pyproject.toml  ~$риншоты.docx  Скриншоты.docx
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
catalog/fixtures/: groups.json
catalog/management/commands/: create_groups.py  load_test_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_status.py  0002_product.py  0003_product_owner.py
catalog/templates/: base.html  category_products.html  contacts.html  footer.html  header.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
users/templates/: logout.html  profile.html  profile_edit.html  register.html
users/templates/registration/: login.html
