[tool.poetry]
name = "ORM_Django"
version = "0.2.0"
description = ""
authors = ["mayya.tokarskaya@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
psycopg2 = "^2.9.10"
pillow = "^11.2.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
